log
Thu Apr 20 05:27:06 PM -04 2023: 
In file included from test.c:4:
treemap.c: In function ‘crearPair’:
treemap.c:31:16: error: incompatible types when returning type ‘void *’ but ‘Pair’ was expected
   31 |         return NULL;
      |                ^~~~
treemap.c: In function ‘createTreeNode’:
treemap.c:52:5: error: implicit declaration of function ‘createPair’; did you mean ‘crearPair’? [-Werror=implicit-function-declaration]
   52 |     createPair(pair ,key, value);
      |     ^~~~~~~~~~
      |     crearPair
cc1: all warnings being treated as errors
Compilation failed
2d8c985
Thu Apr 20 05:27:37 PM -04 2023: 
In file included from test.c:4:
treemap.c: In function ‘crearPair’:
treemap.c:31:16: error: incompatible types when returning type ‘void *’ but ‘Pair’ was expected
   31 |         return NULL;
      |                ^~~~
treemap.c: In function ‘createTreeNode’:
treemap.c:52:5: error: implicit declaration of function ‘createPair’; did you mean ‘crearPair’? [-Werror=implicit-function-declaration]
   52 |     createPair(pair ,key, value);
      |     ^~~~~~~~~~
      |     crearPair
cc1: all warnings being treated as errors
Compilation failed
83653e9
Thu Apr 20 05:27:52 PM -04 2023: 
 treemap.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeNode’:
treemap.c:50:5: error: implicit declaration of function ‘createPair’; did you mean ‘crearPair’? [-Werror=implicit-function-declaration]
   50 |     createPair(pair ,key, value);
      |     ^~~~~~~~~~
      |     crearPair
cc1: all warnings being treated as errors
Compilation failed
309090f
Thu Apr 20 05:28:07 PM -04 2023: 
In file included from test.c:4:
treemap.c: In function ‘createTreeNode’:
treemap.c:50:5: error: implicit declaration of function ‘createPair’; did you mean ‘crearPair’? [-Werror=implicit-function-declaration]
   50 |     createPair(pair ,key, value);
      |     ^~~~~~~~~~
      |     crearPair
cc1: all warnings being treated as errors
Compilation failed
c49b6ae
Thu Apr 20 05:28:14 PM -04 2023: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
b8363c2
Thu Apr 20 05:49:29 PM -04 2023: 
 treemap.c | 114 ++++++++++++++++++++++++++++++++++++++------------------------
 1 file changed, 71 insertions(+), 43 deletions(-)
 tests:  0|0
2a8a294
Thu Apr 20 06:09:34 PM -04 2023: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
dbd144c
Thu Apr 20 06:13:11 PM -04 2023: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
043f59d
Thu Apr 20 08:48:14 PM -04 2023: 
 treemap.c | 95 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 92 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:76:21: error: assignment to ‘TreeNode *’ from incompatible pointer type ‘TreeNode * (*)(void *, void *)’ [-Werror=incompatible-pointer-types]
   76 |     nuevotree->root = createTreeNode;
      |                     ^
cc1: all warnings being treated as errors
Compilation failed
bfc0dec
Thu Apr 20 08:49:25 PM -04 2023: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|8
total_score: 0/70
b88155a
Thu Apr 20 08:51:51 PM -04 2023: 
 treemap.c | 198 +++++++++++---------------------------------------------------
 1 file changed, 35 insertions(+), 163 deletions(-)
 tests:  4|7
total_score: 5/70
fe7f4d0
Thu Apr 20 09:03:00 PM -04 2023: 
 treemap.c | 58 ++++++++++++++++++++++++++++------------------------------
 1 file changed, 28 insertions(+), 30 deletions(-)
 tests:  0|0
fbb7a06
Thu Apr 20 09:04:41 PM -04 2023: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  3|0
   [ INFO ] inicializando el arbol...
5e71e60
Thu Apr 20 09:09:04 PM -04 2023: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|0
   [ INFO ] inicializando el arbol...
1c3d938
Thu Apr 20 09:22:15 PM -04 2023: 
 treemap.c | 43 +++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 43 insertions(+)
 tests:  3|0
   [ INFO ] inicializando el arbol...
246af72
Thu Apr 20 09:27:15 PM -04 2023: 
 treemap.c | 28 ++++++++++++++++++++++------
 1 file changed, 22 insertions(+), 6 deletions(-)
 tests:  3|1
   [ INFO ] inicializando el arbol...
82faaf2
Thu Apr 20 09:29:44 PM -04 2023: 
 treemap.c | 50 ++++++++++++++++++++++++++++++++++++++++----------
 1 file changed, 40 insertions(+), 10 deletions(-)
 tests:  0|0
c6d554d
Thu Apr 20 09:50:03 PM -04 2023: 
 treemap.c | 181 +++++++++++++++++++++++---------------------------------------
 1 file changed, 66 insertions(+), 115 deletions(-)
 tests:  15|4
total_score: 25/70
534749e
Thu Apr 20 10:04:28 PM -04 2023: 
 treemap.c | 128 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 127 insertions(+), 1 deletion(-)
 tests:  29|0
total_score: 70/70
0a67ccb
Thu Apr 20 10:06:08 PM -04 2023: 
 treemap.c | 58 ++--------------------------------------------------------
 1 file changed, 2 insertions(+), 56 deletions(-)
 tests:  29|0
total_score: 70/70
45c0a68
Thu Apr 20 10:33:21 PM -04 2023: 
 treemap.c | 28 +++++++++++++++++-----------
 1 file changed, 17 insertions(+), 11 deletions(-)
 tests:  29|0
total_score: 70/70
ff3a41e
Thu Apr 20 10:33:41 PM -04 2023: 
 treemap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  0|0
54bf722
